--- a/estilo.css
+++ b/estilo.css
@@ -20,6 +20,11 @@ h2{letter-spacing:0.02em; color:rgba(255,255,255,0.5); padding:0.2em 0; }
 
 h3{letter-spacing:0.2em; color:rgba(0,0,0,1); padding:2em 0 0.6em 0; }
 
+h4{color:rgba(255,255,255,1);}
+
+h5{color:rgba(255,255,255,1);}
+
+
 #contenido{width:98%; margin:1% auto;}
 
 header{
